--- a/generic.html
+++ b/generic.html
@@ -40,7 +40,7 @@
 			<article id="main">
 				<header>
 					<h2>Generic Page</h2>
-					<p>Aliquam ut ex ut interdum donec amet imperdiet eleifend</p>
+					<p><!-- İçerik boşaltıldı --></p>
 				</header>
 				<section class="wrapper style5">
 					<div class="inner">
