--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<h2>Spectral</h2>
+							<h2>POSITIVEDARK</h2>
 							<p>Future begins today<br />
 						<br />
 							crafted by <a href="http://html5up.net">POSITIVEDARK</a>.</p>
