--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 							<h2>POSITIVEDARK</h2>
 							<p>Future begins today<br />
 						<br />
-							crafted by <a href="http://html5up.net">POSITIVEDARK</a>.</p>
+							crafted by <a href="https://github.com/positiveDark1/">POSITIVEDARK</a>.</p>
 							<ul class="actions special">
 								<li><a href="#" class="button primary">GET STARTED</a></li>
 							</ul>
