--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; Copyright</li><li>PositiveDark1 <a href="https://github.com/positiveDark1/">My GitHub</a></li>
 						</ul>
 					</footer>
 
