--- a/index.html
+++ b/index.html
@@ -53,66 +53,13 @@
 					</section>
 
 				<!-- One -->
-					<section id="one" class="wrapper style1 special">
-						<div class="inner">
-							<header class="major">
-								<!-- Removed non-English/Latin content -->
-							</header>
-							<ul class="icons major">
-								<li><span class="icon fa-gem major style1"><span class="label">Lorem</span></span></li>
-								<li><span class="icon fa-heart major style2"><span class="label">Ipsum</span></span></li>
-								<li><span class="icon solid fa-code major style3"><span class="label">Dolor</span></span></li>
-							</ul>
-						</div>
-					</section>
+					<!-- Removed: Section containing only Latin/non-English text and icons -->
 
 				<!-- Two -->
-					<section id="two" class="wrapper alt style2">
-						<section class="spotlight">
-							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
-								<!-- Removed non-English/Latin content -->
-							</div>
-						</section>
-						<section class="spotlight">
-							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
-								<!-- Removed non-English/Latin content -->
-							</div>
-						</section>
-						<section class="spotlight">
-							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
-								<!-- Removed non-English/Latin content -->
-							</div>
-						</section>
-					</section>
+					<!-- Removed: Section containing only Latin/non-English text and icons -->
 
 				<!-- Three -->
-					<section id="three" class="wrapper style3 special">
-						<div class="inner">
-							<header class="major">
-								<!-- Removed non-English/Latin content -->
-							</header>
-							<ul class="features">
-								<li class="icon fa-paper-plane">
-									<!-- Removed non-English/Latin content -->
-								</li>
-								<li class="icon solid fa-laptop">
-									<!-- Removed non-English/Latin content -->
-								</li>
-								<li class="icon solid fa-code">
-									<!-- Removed non-English/Latin content -->
-								</li>
-								<li class="icon solid fa-headphones-alt">
-									<!-- Removed non-English/Latin content -->
-								</li>
-								<li class="icon fa-heart">
-									<!-- Removed non-English/Latin content -->
-								</li>
-								<li class="icon fa-flag">
-									<!-- Removed non-English/Latin content -->
-								</li>
-							</ul>
-						</div>
-					</section>
+					<!-- Removed: Section containing only Latin/non-English text and icons -->
 
 				<!-- CTA -->
 					<section id="cta" class="wrapper style4">
