--- a/index.html
+++ b/index.html
@@ -49,17 +49,8 @@
 								<li><a href="#" class="button primary">GET STARTED</a></li>
 							</ul>
 						</div>
-						<a href="#one" class="more scrolly">Learn More</a>
+						<!-- "Learn More" aşağı okunu ve yazısını buradan kaldırdım -->
 					</section>
-
-				<!-- One -->
-					<!-- Removed: Section containing only Latin/non-English text and icons -->
-
-				<!-- Two -->
-					<!-- Removed: Section containing only Latin/non-English text and icons -->
-
-				<!-- Three -->
-					<!-- Removed: Section containing only Latin/non-English text and icons -->
 
 				<!-- CTA -->
 					<section id="cta" class="wrapper style4">
@@ -67,10 +58,11 @@
 							<header>
 								<!-- Removed non-English/Latin content -->
 							</header>
-							<ul class="actions stacked">
+							<!-- "Activate" ve "Learn More" butonları kaldırıldı -->
+							<!-- <ul class="actions stacked">
 								<li><a href="#" class="button fit primary">Activate</a></li>
 								<li><a href="#" class="button fit">Learn More</a></li>
-							</ul>
+							</ul> -->
 						</div>
 					</section>
 
