--- a/index.html
+++ b/index.html
@@ -53,18 +53,7 @@
 					</section>
 
 				<!-- CTA -->
-					<section id="cta" class="wrapper style4">
-						<div class="inner">
-							<header>
-								<!-- Removed non-English/Latin content -->
-							</header>
-							<!-- "Activate" ve "Learn More" butonları kaldırıldı -->
-							<!-- <ul class="actions stacked">
-								<li><a href="#" class="button fit primary">Activate</a></li>
-								<li><a href="#" class="button fit">Learn More</a></li>
-							</ul> -->
-						</div>
-					</section>
+					<!-- Bu bölümü tamamen kaldırdım, alttaki boşluk böylece kaybolacak -->
 
 				<!-- Footer -->
 					<footer id="footer">
