--- a/index.html
+++ b/index.html
@@ -52,17 +52,10 @@
 						<!-- "Learn More" aşağı okunu ve yazısını buradan kaldırdım -->
 					</section>
 
-				<!-- CTA -->
-					<!-- Bu bölümü tamamen kaldırdım, alttaki boşluk böylece kaybolacak -->
-
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+							<!-- Sosyal medya ikonları tamamen silindi -->
 						</ul>
 						<ul class="copyright">
 							<li>&copy; Copyright</li><li>PositiveDark1 <a href="https://github.com/positiveDark1/">My GitHub</a></li>
